--- a/settings.html
+++ b/settings.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Preferences - ContextSearch</title>
+    <title>Preferences - RAU</title>
   </head>
   <body>
     <div id="settings-root"></div>
