--- a/scriptsmith.html
+++ b/scriptsmith.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self'; object-src 'none'; base-uri 'self'; frame-src 'none'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RAU</title>
+    <title>Scriptsmith - RAU</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="scriptsmith-root"></div>
+    <script type="module" src="/src/scriptsmith.jsx"></script>
   </body>
 </html>
+
